認証/登録/更新/削除機能を追加
