# src/dto/device-auth.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class DeviceAuthDto {
+  @ApiProperty()
+  @IsString()
+  @IsNotEmpty()
+  readonly pinCode: string;
+}
